# system-monitor

./: CMakeLists.txt  main.cpp
include/: CPUParser.hpp  MemoryParser.hpp  NetParser.hpp
src/: CPUParser.cpp  MemoryParser.cpp  NetParser.cpp
